<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thomas.sapiadvert.MainActivity"
    android:padding="10dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/advertisementRecylerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchTextView" />

    <EditText
        android:id="@+id/searchTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ad_read_profilePictureImageView"
        android:layout_toStartOf="@+id/addNewAdvertisementButton"
        android:imeOptions="actionSearch"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/ad_read_profilePictureImageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/profile_picture" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/advertisementRecylerView">
        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />
    </GridLayout>

    <TextView
        android:id="@+id/addNewAdvertisementButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/advertisementRecylerView"
        android:layout_toStartOf="@+id/ad_read_profilePictureImageView"
        android:text="@string/add" />

</RelativeLayout>
