<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.thomas.sapiadvert.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:layout_marginBottom="-5dp"/>
                <EditText
                    android:id="@+id/firstNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="textPersonName" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:layout_marginBottom="-5dp"/>
                <EditText
                    android:id="@+id/lastNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="textPersonName" />
            </LinearLayout>
            <ImageView
                android:id="@+id/profilePhotoDisplay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@android:drawable/btn_star"
                android:layout_gravity="center"/>
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_marginBottom="-5dp"/>
        <EditText
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginBottom="-5dp"/>
        <EditText
            android:id="@+id/phoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:focusable="false"
            android:inputType="phone" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>